pr11/k8s/service-api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: default
spec:
  selector:
    app: api-gateway
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
